deploy/aks/ingress-tls.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-api
  namespace: java-rag-ns
  annotations: 
    nginx.ingress.kubernetes.io/proxy-body-size : "20m"
    kubernetes.azure.com/tls-cert-keyvault-uri: https://kv-dwnlxp47m7pwq.vault.azure.net/certificates/aks-ingress-tls
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
    - host: java-rag-aks-test3.eastus2.cloudapp.azure.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
  tls:
    - hosts:
        - java-rag-aks-test3.eastus2.cloudapp.azure.com
      secretName: keyvault-ingress-api
